--- a/tinySTL/tinySTL.vcxproj
+++ b/tinySTL/tinySTL.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="heap.h" />
     <ClInclude Include="iterator.h" />
     <ClInclude Include="list.h" />
+    <ClInclude Include="rbtree.h" />
     <ClInclude Include="reverseIterator.h" />
     <ClInclude Include="stack.h" />
     <ClInclude Include="string.h" />
