--- a/tinySTL/tinySTL.vcxproj.filters
+++ b/tinySTL/tinySTL.vcxproj.filters
@@ -57,14 +57,17 @@
     <ClInclude Include="list.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="AVLTree.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="stack.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="testAVL.h">
       <Filter>头文件\test</Filter>
+    </ClInclude>
+    <ClInclude Include="rbtree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="AVLTree.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
