--- a/tinySTL/tinySTL.vcxproj
+++ b/tinySTL/tinySTL.vcxproj
@@ -25,9 +25,15 @@
     <ClInclude Include="construct.h" />
     <ClInclude Include="deque.h" />
     <ClInclude Include="function.h" />
+    <ClInclude Include="hashtable.h" />
+    <ClInclude Include="hash_map.h" />
+    <ClInclude Include="hash_set.h" />
     <ClInclude Include="heap.h" />
     <ClInclude Include="iterator.h" />
     <ClInclude Include="list.h" />
+    <ClInclude Include="map.h" />
+    <ClInclude Include="multihash.h" />
+    <ClInclude Include="multiset.h" />
     <ClInclude Include="priority_queue.h" />
     <ClInclude Include="queue.h" />
     <ClInclude Include="rbtree.h" />
