--- a/tinySTL/tinySTL.vcxproj.filters
+++ b/tinySTL/tinySTL.vcxproj.filters
@@ -81,6 +81,24 @@
     <ClInclude Include="queue.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="map.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="hash_map.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="multiset.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="multihash.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="hash_set.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="hashtable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="源.cpp">
