--- a/tinySTL/tinySTL.vcxproj.filters
+++ b/tinySTL/tinySTL.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="hashtable.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="hash_function.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="源.cpp">
